ww-frame/src/snapshots/ww_frame__frame__tests__to_raw_data_test-2.snap
---
source: ww-frame/src/frame.rs
description: Rendering two planes with no blend
info:
  objects:
    - object:
        Plane:
          normal:
            - 0.27216554
            - 0.13608277
            - -0.9525794
          k: -1.2354
          threshold: 0.15
      colour:
        - 25
        - 200
        - 16
      fadeoff: 0.14
    - object:
        Plane:
          normal:
            - -0.6265843
            - 0.7793142
            - -0.007832304
          k: 0.24
          threshold: 0.3
      colour:
        - 0
        - 12
        - 186
      fadeoff: 0.82
  blend: false
---
[
  (0, 12, 186),
  (0, 10, 165),
  (0, 11, 176),
  (0, 10, 158),
  (0, 11, 178),
  (0, 10, 165),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 10, 162),
  (0, 11, 182),
  (0, 10, 169),
  (0, 10, 165),
  (0, 10, 159),
  (0, 11, 176),
  (0, 11, 184),
  (0, 11, 185),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 184),
  (0, 11, 184),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 10, 155),
  (0, 10, 165),
  (0, 9, 148),
  (0, 9, 140),
  (0, 7, 121),
  (0, 6, 100),
  (0, 6, 105),
  (0, 7, 120),
  (0, 5, 83),
  (0, 1, 22),
  (0, 0, 11),
  (0, 2, 33),
  (0, 2, 45),
  (0, 4, 64),
  (0, 3, 58),
  (0, 6, 107),
  (0, 9, 153),
  (0, 9, 143),
  (0, 8, 130),
  (0, 11, 171),
  (0, 12, 186),
  (0, 10, 163),
  (0, 8, 135),
  (0, 8, 136),
  (0, 9, 140),
  (0, 6, 94),
  (0, 6, 100),
  (0, 4, 63),
  (0, 5, 85),
  (0, 6, 99),
  (0, 5, 92),
  (0, 2, 39),
  (0, 0, 12),
  (0, 3, 58),
  (0, 0, 1),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 1, 24),
  (0, 3, 61),
  (0, 5, 86),
  (0, 6, 98),
  (0, 7, 113),
  (0, 9, 141),
  (0, 9, 150),
  (0, 12, 186),
  (0, 9, 140),
  (0, 7, 121),
  (0, 7, 110),
  (0, 5, 79),
  (0, 4, 64),
  (0, 4, 63),
  (0, 0, 3),
  (0, 0, 0),
  (0, 3, 50),
  (0, 1, 30),
  (0, 3, 54),
  (0, 4, 72),
  (0, 4, 75),
  (0, 7, 118),
  (0, 7, 110),
  (0, 7, 122),
  (0, 10, 168),
  (0, 7, 121),
  (0, 8, 126),
  (0, 8, 138),
  (0, 6, 101),
  (0, 9, 150),
  (0, 10, 159),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 177),
  (0, 9, 149),
  (0, 12, 186),
  (0, 10, 166),
  (0, 9, 145),
  (0, 6, 102),
  (0, 7, 109),
  (0, 5, 81),
  (0, 4, 74),
  (0, 7, 108),
  (0, 4, 77),
  (0, 6, 103),
  (0, 9, 145),
  (0, 8, 131),
  (0, 10, 159),
  (0, 7, 113),
  (0, 8, 138),
  (0, 8, 134),
  (0, 6, 93),
  (0, 8, 130),
  (0, 9, 148),
  (0, 8, 134),
  (0, 10, 161),
  (0, 6, 105),
  (0, 5, 89),
  (0, 6, 100),
  (0, 9, 151),
  (0, 8, 138),
  (0, 11, 176),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 176),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 171),
  (0, 10, 159),
  (0, 7, 115),
  (0, 6, 96),
  (0, 6, 94),
  (0, 8, 127),
  (0, 5, 88),
  (0, 8, 133),
  (0, 6, 106),
  (0, 9, 141),
  (0, 7, 108),
  (0, 7, 111),
  (0, 7, 122),
  (0, 9, 141),
  (0, 8, 135),
  (0, 8, 134),
  (0, 6, 94),
  (0, 8, 137),
  (0, 10, 160),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 9, 139),
  (0, 9, 151),
  (0, 6, 103),
  (0, 7, 117),
  (0, 7, 113),
  (0, 9, 150),
  (0, 9, 153),
  (0, 10, 163),
  (0, 12, 186),
  (0, 11, 176),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 178),
  (0, 12, 186),
  (0, 12, 186),
  (0, 10, 157),
  (0, 12, 186),
  (0, 11, 172),
  (0, 12, 186),
  (0, 10, 170),
  (0, 10, 166),
  (0, 7, 122),
  (0, 8, 124),
  (0, 7, 114),
  (0, 7, 110),
  (0, 5, 91),
  (0, 7, 109),
  (0, 5, 91),
  (0, 4, 66),
  (0, 7, 109),
  (0, 12, 186),
  (0, 5, 92),
  (0, 5, 86),
  (0, 5, 92),
  (0, 5, 82),
  (0, 8, 139),
  (0, 6, 95),
  (0, 9, 150),
  (0, 7, 123),
  (0, 9, 144),
  (0, 6, 108),
  (0, 9, 140),
  (0, 8, 138),
  (0, 8, 133),
  (0, 8, 132),
  (0, 7, 117),
  (0, 8, 126),
  (0, 7, 117),
  (0, 7, 120),
  (0, 8, 127),
  (0, 7, 113),
  (0, 4, 76),
  (0, 3, 46),
  (0, 2, 35),
  (0, 3, 55),
  (0, 3, 56),
  (0, 1, 16),
  (0, 3, 50),
  (0, 2, 39),
  (0, 1, 28),
  (0, 1, 21),
  (0, 4, 63),
  (0, 1, 25),
  (0, 1, 23),
  (0, 0, 4),
  (0, 0, 0),
  (0, 0, 6),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 1, 23),
  (0, 0, 4),
  (0, 6, 93),
  (0, 3, 58),
  (0, 4, 63),
  (0, 5, 83),
  (0, 6, 93),
  (0, 5, 88),
  (0, 5, 87),
  (0, 5, 84),
  (0, 5, 81),
  (0, 5, 86),
  (0, 6, 101),
  (0, 2, 40),
  (0, 2, 31),
  (0, 4, 67),
  (0, 4, 69),
  (0, 7, 112),
  (0, 6, 103),
  (0, 5, 84),
  (0, 6, 100),
  (0, 4, 69),
  (0, 2, 33),
  (0, 3, 58),
  (0, 4, 63),
  (0, 4, 75),
  (0, 2, 43),
  (0, 4, 70),
  (0, 1, 22),
  (0, 2, 37),
  (0, 2, 42),
  (0, 0, 0),
  (0, 2, 43),
  (0, 3, 48),
  (0, 3, 60),
  (0, 3, 49),
  (0, 4, 69),
  (0, 5, 78),
  (0, 3, 58),
  (0, 7, 122),
  (0, 8, 126),
  (0, 8, 124),
  (0, 8, 133),
  (0, 7, 121),
  (0, 10, 160),
  (0, 7, 113),
  (0, 5, 77),
  (0, 8, 129),
  (0, 8, 128),
  (0, 5, 91),
  (0, 8, 134),
  (0, 9, 148),
  (0, 9, 146),
  (0, 7, 121),
  (0, 8, 130),
  (0, 8, 137),
  (0, 11, 177),
  (0, 10, 159),
  (0, 11, 180),
  (0, 12, 186),
  (0, 9, 150),
  (0, 12, 186),
  (0, 12, 186),
  (0, 9, 151),
  (0, 11, 172),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 182),
  (0, 7, 119),
  (0, 8, 131),
  (0, 9, 150),
  (0, 7, 113),
  (0, 7, 119),
  (0, 5, 92),
  (0, 7, 115),
  (0, 7, 118),
  (0, 8, 130),
  (0, 9, 141),
  (0, 10, 158),
  (0, 10, 160),
  (0, 7, 115),
  (0, 7, 118),
  (0, 7, 123),
  (0, 10, 162),
  (0, 11, 174),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 9, 154),
  (0, 9, 150),
  (0, 8, 135),
  (0, 11, 182),
  (0, 11, 181),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 10, 159),
  (0, 10, 155),
  (0, 8, 127),
  (0, 9, 141),
  (0, 9, 146),
  (0, 8, 137),
  (0, 8, 136),
  (0, 9, 151),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 9, 149),
  (0, 10, 169),
  (0, 8, 126),
  (0, 8, 128),
  (0, 6, 105),
  (0, 5, 86),
  (0, 6, 100),
  (0, 5, 88),
  (0, 4, 72),
  (0, 5, 85),
  (0, 4, 75),
  (0, 8, 126),
  (0, 6, 96),
  (0, 8, 126),
  (0, 10, 163),
  (0, 8, 129),
  (0, 9, 141),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 176),
  (0, 10, 158),
  (0, 10, 163),
  (0, 9, 152),
  (0, 8, 134),
  (0, 8, 133),
  (0, 8, 128),
  (0, 8, 135),
  (0, 6, 104),
  (0, 10, 159),
  (0, 11, 173),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 10, 169),
  (0, 9, 140),
  (0, 11, 181),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 172),
  (0, 12, 186),
  (0, 10, 166),
  (0, 8, 127),
  (0, 7, 113),
  (0, 5, 86),
  (0, 7, 121),
  (0, 5, 86),
  (0, 5, 90),
  (0, 4, 67),
  (0, 5, 92),
  (0, 5, 78),
]
