ww-frame/src/snapshots/ww_frame__frame__tests__to_raw_data_test-3.snap
---
source: ww-frame/src/frame.rs
description: Rendering two planes with with blend
info:
  objects:
    - object:
        Plane:
          normal:
            - 0.27216554
            - 0.13608277
            - -0.9525794
          k: -1.2354
          threshold: 0.15
      colour:
        - 25
        - 200
        - 16
      fadeoff: 0.14
    - object:
        Plane:
          normal:
            - -0.6265843
            - 0.7793142
            - -0.007832304
          k: 0.24
          threshold: 0.3
      colour:
        - 0
        - 12
        - 186
      fadeoff: 0.82
  blend: true
---
[
  (0, 6, 93),
  (0, 5, 82),
  (0, 5, 88),
  (0, 5, 79),
  (0, 5, 89),
  (0, 5, 82),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 81),
  (0, 5, 91),
  (0, 5, 84),
  (0, 5, 82),
  (0, 5, 79),
  (0, 5, 88),
  (0, 5, 92),
  (0, 5, 92),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 92),
  (0, 5, 92),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 77),
  (0, 5, 82),
  (0, 4, 74),
  (0, 4, 70),
  (0, 3, 60),
  (0, 3, 50),
  (0, 3, 52),
  (0, 3, 60),
  (0, 2, 41),
  (0, 0, 11),
  (0, 0, 5),
  (0, 1, 16),
  (0, 1, 22),
  (0, 2, 32),
  (0, 1, 29),
  (0, 3, 53),
  (0, 4, 76),
  (0, 4, 71),
  (0, 4, 65),
  (0, 5, 85),
  (0, 6, 93),
  (0, 5, 81),
  (0, 4, 67),
  (0, 4, 68),
  (0, 4, 70),
  (0, 3, 47),
  (0, 3, 50),
  (0, 2, 31),
  (0, 2, 42),
  (0, 3, 49),
  (0, 2, 46),
  (0, 1, 19),
  (0, 0, 6),
  (0, 1, 29),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 12),
  (0, 1, 30),
  (0, 2, 43),
  (0, 3, 49),
  (0, 3, 56),
  (0, 4, 70),
  (0, 4, 75),
  (0, 6, 93),
  (0, 4, 70),
  (0, 3, 60),
  (0, 3, 55),
  (0, 2, 39),
  (3, 26, 33),
  (12, 102, 39),
  (0, 0, 1),
  (0, 0, 0),
  (0, 1, 25),
  (0, 0, 15),
  (0, 1, 27),
  (0, 2, 36),
  (0, 2, 37),
  (0, 3, 59),
  (0, 3, 55),
  (0, 3, 61),
  (0, 5, 84),
  (0, 3, 60),
  (0, 6, 63),
  (11, 99, 76),
  (7, 61, 55),
  (0, 4, 75),
  (0, 5, 79),
  (4, 44, 96),
  (11, 99, 100),
  (12, 106, 101),
  (2, 26, 94),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 88),
  (7, 66, 79),
  (0, 6, 93),
  (0, 5, 83),
  (7, 67, 77),
  (10, 90, 58),
  (0, 3, 54),
  (0, 2, 40),
  (0, 2, 37),
  (0, 3, 54),
  (0, 2, 38),
  (0, 3, 51),
  (0, 4, 72),
  (0, 4, 65),
  (0, 5, 79),
  (0, 3, 56),
  (0, 4, 69),
  (0, 4, 67),
  (0, 3, 46),
  (0, 4, 65),
  (0, 4, 74),
  (0, 4, 67),
  (0, 5, 80),
  (0, 3, 52),
  (0, 2, 44),
  (0, 3, 50),
  (0, 4, 75),
  (5, 49, 72),
  (0, 5, 88),
  (0, 6, 93),
  (1, 14, 93),
  (6, 60, 97),
  (0, 6, 93),
  (0, 6, 93),
  (1, 17, 93),
  (0, 6, 93),
  (0, 5, 88),
  (9, 85, 99),
  (12, 106, 101),
  (12, 106, 101),
  (12, 106, 101),
  (12, 106, 101),
  (12, 106, 101),
  (12, 102, 100),
  (1, 18, 93),
  (0, 5, 85),
  (5, 50, 83),
  (0, 3, 57),
  (0, 3, 48),
  (2, 26, 48),
  (6, 59, 67),
  (2, 18, 45),
  (0, 4, 66),
  (0, 3, 53),
  (0, 4, 70),
  (0, 3, 54),
  (0, 3, 55),
  (7, 61, 65),
  (11, 95, 77),
  (12, 104, 75),
  (12, 104, 75),
  (9, 78, 53),
  (0, 4, 68),
  (0, 5, 80),
  (2, 26, 94),
  (11, 94, 100),
  (12, 106, 101),
  (12, 106, 101),
  (0, 6, 93),
  (9, 78, 98),
  (0, 6, 93),
  (0, 4, 69),
  (0, 4, 75),
  (1, 17, 52),
  (12, 103, 66),
  (12, 103, 64),
  (9, 76, 80),
  (12, 104, 84),
  (12, 105, 89),
  (12, 106, 101),
  (12, 105, 96),
  (9, 82, 99),
  (0, 9, 93),
  (8, 76, 98),
  (7, 68, 98),
  (12, 106, 101),
  (12, 106, 101),
  (12, 106, 101),
  (2, 28, 94),
  (12, 106, 101),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 8, 93),
  (12, 106, 101),
  (12, 106, 101),
  (12, 106, 101),
  (12, 106, 101),
  (8, 71, 98),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 89),
  (0, 6, 93),
  (0, 6, 93),
  (2, 27, 80),
  (11, 97, 100),
  (12, 105, 94),
  (12, 106, 101),
  (12, 105, 93),
  (11, 97, 90),
  (12, 103, 69),
  (7, 66, 66),
  (12, 103, 65),
  (11, 98, 62),
  (12, 102, 53),
  (1, 15, 55),
  (12, 102, 53),
  (12, 102, 41),
  (12, 103, 62),
  (4, 44, 96),
  (12, 102, 54),
  (12, 102, 51),
  (10, 84, 52),
  (5, 49, 44),
  (0, 4, 69),
  (0, 3, 47),
  (0, 4, 75),
  (0, 3, 61),
  (0, 4, 72),
  (0, 3, 54),
  (0, 4, 70),
  (0, 4, 69),
  (0, 4, 66),
  (0, 4, 66),
  (0, 3, 58),
  (0, 4, 63),
  (0, 3, 58),
  (0, 3, 60),
  (0, 4, 63),
  (0, 3, 56),
  (0, 2, 38),
  (3, 32, 25),
  (7, 62, 22),
  (12, 101, 35),
  (12, 101, 36),
  (8, 72, 13),
  (9, 78, 31),
  (0, 1, 19),
  (0, 0, 14),
  (0, 0, 10),
  (0, 2, 31),
  (0, 0, 12),
  (0, 0, 11),
  (0, 0, 2),
  (0, 0, 0),
  (0, 0, 3),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 11),
  (0, 0, 2),
  (0, 3, 46),
  (0, 1, 29),
  (0, 2, 31),
  (0, 2, 41),
  (0, 3, 46),
  (1, 16, 45),
  (0, 2, 43),
  (12, 102, 50),
  (12, 102, 48),
  (12, 102, 51),
  (12, 103, 58),
  (12, 101, 28),
  (12, 101, 23),
  (12, 102, 41),
  (0, 2, 34),
  (0, 3, 56),
  (0, 3, 51),
  (0, 2, 42),
  (0, 3, 50),
  (0, 2, 34),
  (0, 1, 16),
  (0, 1, 29),
  (12, 99, 39),
  (10, 87, 44),
  (12, 101, 29),
  (10, 89, 42),
  (0, 0, 11),
  (0, 1, 18),
  (0, 1, 21),
  (0, 0, 0),
  (0, 1, 21),
  (0, 1, 24),
  (0, 1, 30),
  (0, 1, 24),
  (0, 2, 34),
  (0, 2, 39),
  (0, 1, 29),
  (0, 3, 61),
  (0, 4, 63),
  (8, 69, 67),
  (12, 104, 74),
  (8, 70, 65),
  (0, 5, 80),
  (0, 3, 56),
  (0, 2, 38),
  (0, 4, 64),
  (4, 36, 66),
  (0, 2, 45),
  (0, 4, 67),
  (5, 46, 77),
  (4, 41, 75),
  (1, 17, 61),
  (12, 104, 73),
  (12, 104, 76),
  (12, 105, 96),
  (2, 23, 81),
  (2, 23, 91),
  (0, 6, 93),
  (0, 4, 75),
  (0, 6, 93),
  (0, 6, 93),
  (0, 4, 75),
  (0, 5, 86),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 91),
  (0, 3, 59),
  (0, 4, 65),
  (0, 4, 75),
  (0, 3, 56),
  (0, 3, 59),
  (1, 17, 47),
  (10, 90, 64),
  (9, 78, 65),
  (10, 89, 71),
  (12, 104, 78),
  (12, 105, 87),
  (12, 105, 88),
  (0, 3, 57),
  (0, 3, 59),
  (0, 3, 61),
  (0, 5, 81),
  (0, 5, 87),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 10, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 4, 77),
  (0, 4, 75),
  (0, 4, 67),
  (0, 5, 91),
  (0, 5, 90),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 79),
  (0, 5, 77),
  (0, 4, 63),
  (0, 4, 70),
  (0, 4, 73),
  (0, 4, 68),
  (0, 4, 68),
  (0, 4, 75),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 4, 74),
  (0, 5, 84),
  (0, 4, 63),
  (0, 4, 64),
  (0, 3, 52),
  (0, 2, 43),
  (0, 3, 50),
  (0, 2, 44),
  (0, 2, 36),
  (0, 2, 42),
  (0, 2, 37),
  (0, 4, 63),
  (0, 3, 48),
  (0, 4, 63),
  (0, 5, 81),
  (0, 4, 64),
  (0, 4, 70),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 88),
  (0, 5, 79),
  (0, 5, 81),
  (0, 4, 76),
  (0, 4, 67),
  (0, 4, 66),
  (0, 4, 64),
  (0, 4, 67),
  (0, 3, 52),
  (0, 5, 79),
  (0, 5, 86),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 84),
  (0, 4, 70),
  (0, 5, 90),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 6, 93),
  (0, 5, 86),
  (0, 6, 93),
  (0, 5, 83),
  (0, 4, 63),
  (0, 3, 56),
  (0, 2, 43),
  (0, 3, 60),
  (0, 2, 43),
  (0, 2, 45),
  (0, 2, 33),
  (0, 2, 46),
  (0, 2, 39),
]
