ww-frame/src/snapshots/ww_frame__frame__tests__to_raw_data_test-4.snap
---
source: ww-frame/src/frame.rs
description: Rendering a blue plane and then a red sphere with no blend
info:
  objects:
    - object:
        Plane:
          normal:
            - -0.6265843
            - 0.7793142
            - -0.007832304
          k: 0.24
          threshold: 0.3
      colour:
        - 0
        - 12
        - 186
      fadeoff: 0.82
    - object:
        Sphere:
          center:
            - 0.01
            - 0.31
            - 0.2
          radius: 1.2
      colour:
        - 243
        - 36
        - 17
      fadeoff: 0.1
  blend: false
---
[
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (158, 23, 11),
  (159, 23, 11),
  (0, 12, 186),
  (243, 36, 17),
  (136, 20, 9),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (209, 31, 14),
  (160, 23, 11),
  (243, 36, 17),
  (232, 34, 16),
  (236, 35, 16),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (172, 25, 12),
  (115, 17, 8),
  (0, 4, 63),
  (0, 0, 3),
  (0, 0, 0),
  (169, 25, 11),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (188, 27, 13),
  (115, 17, 8),
  (243, 36, 17),
  (0, 7, 121),
  (228, 33, 15),
  (0, 8, 138),
  (0, 6, 101),
  (228, 33, 15),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (224, 33, 15),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (0, 8, 134),
  (0, 6, 94),
  (0, 8, 137),
  (0, 10, 160),
  (0, 12, 186),
  (69, 10, 4),
  (243, 36, 17),
  (100, 14, 7),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 9, 139),
  (0, 9, 151),
  (0, 6, 103),
  (0, 7, 117),
  (0, 7, 113),
  (243, 36, 17),
  (157, 23, 11),
  (208, 30, 14),
  (243, 36, 17),
  (130, 19, 9),
  (0, 12, 186),
  (0, 12, 186),
  (42, 6, 2),
  (0, 12, 186),
  (159, 23, 11),
  (0, 12, 186),
  (0, 12, 186),
  (194, 28, 13),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (28, 4, 2),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 178),
  (0, 12, 186),
  (0, 12, 186),
  (0, 10, 157),
  (0, 12, 186),
  (0, 11, 172),
  (0, 12, 186),
  (52, 7, 3),
  (26, 3, 1),
  (0, 7, 122),
  (0, 8, 124),
  (0, 7, 114),
  (0, 7, 110),
  (0, 5, 91),
  (0, 7, 109),
  (0, 5, 91),
  (0, 4, 66),
  (0, 7, 109),
  (0, 12, 186),
  (0, 5, 92),
  (0, 5, 86),
  (0, 5, 92),
  (0, 5, 82),
  (0, 8, 139),
  (0, 6, 95),
  (0, 9, 150),
  (0, 7, 123),
  (0, 9, 144),
  (0, 6, 108),
  (0, 9, 140),
  (0, 8, 138),
  (0, 8, 133),
  (0, 8, 132),
  (0, 7, 117),
  (0, 8, 126),
  (0, 7, 117),
  (0, 7, 120),
  (0, 8, 127),
  (0, 7, 113),
  (0, 4, 76),
  (0, 3, 46),
  (0, 2, 35),
  (0, 3, 55),
  (0, 3, 56),
  (0, 1, 16),
  (0, 3, 50),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (22, 3, 1),
  (243, 36, 17),
  (107, 15, 7),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (0, 5, 84),
  (0, 5, 81),
  (0, 5, 86),
  (132, 19, 9),
  (0, 2, 40),
  (0, 2, 31),
  (0, 4, 67),
  (0, 4, 69),
  (0, 7, 112),
  (0, 6, 103),
  (0, 5, 84),
  (0, 6, 100),
  (0, 4, 69),
  (0, 2, 33),
  (0, 3, 58),
  (0, 4, 63),
  (0, 4, 75),
  (0, 2, 43),
  (0, 4, 70),
  (0, 1, 22),
  (71, 10, 4),
  (0, 2, 42),
  (0, 0, 0),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (235, 34, 16),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (219, 32, 15),
  (243, 36, 17),
  (0, 8, 130),
  (0, 8, 137),
  (0, 11, 177),
  (224, 33, 15),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (243, 36, 17),
  (159, 23, 11),
  (243, 36, 17),
  (18, 2, 1),
  (68, 10, 4),
  (209, 30, 14),
  (243, 36, 17),
  (243, 36, 17),
  (0, 10, 158),
  (0, 10, 160),
  (0, 7, 115),
  (0, 7, 118),
  (0, 7, 123),
  (0, 10, 162),
  (0, 11, 174),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 9, 154),
  (0, 9, 150),
  (0, 8, 135),
  (0, 11, 182),
  (0, 11, 181),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 10, 159),
  (0, 10, 155),
  (0, 8, 127),
  (0, 9, 141),
  (0, 9, 146),
  (0, 8, 137),
  (0, 8, 136),
  (0, 9, 151),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 9, 149),
  (0, 10, 169),
  (0, 8, 126),
  (0, 8, 128),
  (0, 6, 105),
  (0, 5, 86),
  (0, 6, 100),
  (0, 5, 88),
  (0, 4, 72),
  (0, 5, 85),
  (0, 4, 75),
  (0, 8, 126),
  (0, 6, 96),
  (0, 8, 126),
  (0, 10, 163),
  (0, 8, 129),
  (0, 9, 141),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 176),
  (0, 10, 158),
  (0, 10, 163),
  (0, 9, 152),
  (0, 8, 134),
  (0, 8, 133),
  (0, 8, 128),
  (0, 8, 135),
  (0, 6, 104),
  (0, 10, 159),
  (0, 11, 173),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 10, 169),
  (0, 9, 140),
  (0, 11, 181),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 12, 186),
  (0, 11, 172),
  (0, 12, 186),
  (0, 10, 166),
  (0, 8, 127),
  (0, 7, 113),
  (0, 5, 86),
  (0, 7, 121),
  (0, 5, 86),
  (0, 5, 90),
  (0, 4, 67),
  (0, 5, 92),
  (0, 5, 78),
]
